# ChangeLog for x11-drivers/xf86-video-intel
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.90 2012/06/26 00:08:06 robbat2 Exp $

  26 Jun 2012; Robin H. Johnson <robbat2@gentoo.org>
  xf86-video-intel-2.10.0-r1.ebuild, xf86-video-intel-2.11.0.ebuild,
  xf86-video-intel-2.13.0.ebuild, xf86-video-intel-2.14.0.ebuild,
  xf86-video-intel-2.15.0-r1.ebuild, xf86-video-intel-2.16.0.ebuild,
  xf86-video-intel-2.17.0-r3.ebuild, xf86-video-intel-2.18.0.ebuild,
  xf86-video-intel-2.19.0.ebuild, xf86-video-intel-2.8.1.ebuild,
  xf86-video-intel-2.9.1.ebuild:
  Bug #364041: Ebuild produced strange warnings because it did not trigger
  linux-info_pkg_setup after inheriting linux-info.

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-intel-2.19.0.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-intel-2.19.0.ebuild:
  Stable for amd64, wrt bug #419473

  03 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xf86-video-intel-2.8.1.ebuild, xf86-video-intel-2.9.1.ebuild:
  Drop non-bsd keywords.

  24 May 2012; Matt Turner <mattst88@gentoo.org>
  xf86-video-intel-2.18.0.ebuild, xf86-video-intel-2.19.0.ebuild:
  Bump pixman requirement to 0.24, bug 410813.

  16 May 2012; Alexis Ballier <aballier@gentoo.org>
  xf86-video-intel-2.19.0.ebuild:
  keyword ~amd64-fbsd (compile tested only)

*xf86-video-intel-2.19.0 (01 May 2012)

  01 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-intel-2.19.0.ebuild, metadata.xml:
  Version bump, bug #414097.

*xf86-video-intel-2.18.0 (24 Feb 2012)

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-intel-2.18.0.ebuild:
  Version bump.

  19 Feb 2012; Raúl Porcel <armin76@gentoo.org>
  xf86-video-intel-2.17.0-r3.ebuild:
  ia64 stable wrt #394393

  27 Dec 2011; Markus Meier <maekke@gentoo.org>