@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 2.10.0-0001-Extract-pixel-value-for-all-formats-to-avoid-hitting.patch 3943 RMD160 edfc2294341ff7c314e87e82ec95ceff920585ca SHA1 b1c9bcfe6b48a0f7426fbdb3c862a121f81a58e7 SHA256 53694b0c147834067b90be1508e96f67d290de595516361c98af069ae6cd9113
 AUX xf86-video-intel-2.15-batch-overrun.patch 882 RMD160 203f4f92a7bffef0f900ccc8f5c81cd69a975dcb SHA1 fc3f100a57dc52c06b7f2109aba774bb3abcef93 SHA256 5044689aaefa4c3416c8e8d70d0765b8b149a8352b3992cb405d3a280d9f495f
 AUX xf86-video-intel-2.15-unsigned-promotion.patch 1207 RMD160 19b3eb510411d1c0d70df793b7d1525828c4035d SHA1 5505becb9bea0391d6441aa070ade16dc01f48d8 SHA256 c61713af565c8ce55d4c00dbfe24380ed6952698df1bf3070813db953b979102
@@ -14,16 +17,23 @@ DIST xf86-video-intel-2.18.0.tar.bz2 1424467 RMD160 7e6dc57ce918ff8ba7121705ff37
 DIST xf86-video-intel-2.19.0.tar.bz2 1463260 RMD160 df7a6797cc74af57c751905e3ce65be35de43e5c SHA1 131934cf5e90bd48c883804cc644c4cb8b1de100 SHA256 32133d61b14ce3b45b83a60e4ed8eb75159259d708f056144250aaeabf16e4bc
 DIST xf86-video-intel-2.8.1.tar.bz2 748928 RMD160 9416290dcbc7631f165a3378bf7aa189a1dea880 SHA1 76ae4c8fbd14a7a16e3f8dc2f2588947635db2bc SHA256 c6778fc7e43c701d5829514329ee70f5dc539ff8f5b3c79587577b617a535c81
 DIST xf86-video-intel-2.9.1.tar.bz2 789001 RMD160 2ccac37af91ec10973c9dc22adc9f172a8ac057a SHA1 ca5887df67ec46f27eeeaf8158048d6500333ccf SHA256 95347c88854c2b41c07ab3bcdfadd1b8d27fb181a20520f185892877eb8d9d76
-EBUILD xf86-video-intel-2.10.0-r1.ebuild 1543 RMD160 34dd25e7b800cd8aceee91598813cb99219a4eb4 SHA1 eb79c178b9451c43040af0d2fa73894780c36464 SHA256 e010c06645cadfb5864ba68fbf638ee1e9f09163d38173a69638a1f69dbeaafe
-EBUILD xf86-video-intel-2.11.0.ebuild 1410 RMD160 a8a34e872eaf5a395771a120cbb4297654cb3b93 SHA1 77be27bd5a01476fe15b79d4118fec197100dac5 SHA256 48b2a4df3838c17b6f7fa8ad85f2bc70251d5ce5bb67f6b6494296a79a4964b0
-EBUILD xf86-video-intel-2.13.0.ebuild 1385 RMD160 a4acf7e6ef84163bcab69e0c70c00e7eb4ff141b SHA1 2ad6974791de11bbf29aa339cfe4761bc1379ba4 SHA256 aeb1c0146a0a8f57baa40250030ba595d8cad970044b3c6f8be9626e76a36b77
-EBUILD xf86-video-intel-2.14.0.ebuild 1385 RMD160 431aa76af71479f20bf4111cb2ad79e2d7348296 SHA1 ce4fa6953bbf2c18ab683e169527e9adacbfbd48 SHA256 0a6de74e49b24b7797cca546f2e5454ba7840b1306f8d6456544bf4909f6ca3c
-EBUILD xf86-video-intel-2.15.0-r1.ebuild 1295 RMD160 9f0dd7860654369f301cfe7a8e10870b972fdd3d SHA1 aa2d7c011810983f7e18dd6f7bc4d429658f9017 SHA256 ddb58c08774f07c5cc088f97d2562b121ed7e648d3badf3c1c4ccfc1c14d5573
-EBUILD xf86-video-intel-2.16.0.ebuild 1255 RMD160 110041a1baa23c7e20ef684f200d3426ce5b0388 SHA1 d6faafdce4514f1d0d39624885ce1b743f5d4bc9 SHA256 c8587424b5e047dac01acedd9fcb24bd6304650be0ca839f5db7ee678ff26a59
-EBUILD xf86-video-intel-2.17.0-r3.ebuild 1426 RMD160 26706bcf498ad98de095729b999ccc30cd24d357 SHA1 e4052806037129e1002b2793215fa8afbd5a1b1c SHA256 e5ae241060d472991b2361cab22628649269270d2f165f56785bdf939d854ced
-EBUILD xf86-video-intel-2.18.0.ebuild 1280 RMD160 ad4d21a329dde099ed3e6c87cecd4db68e7d61bd SHA1 7dafcce9d1c9d8998ab2754608d5d93a470cfba3 SHA256 40b32c481eb5c3a307290d46d47d8d9b13d98ff1991c97e81295f21a47f4b994
-EBUILD xf86-video-intel-2.19.0.ebuild 1352 RMD160 8ae685c07e7269bf8f6caa973c693703cddc5db5 SHA1 c81a417c8b5e02bf1be35d050b419cd1988f5a5a SHA256 66bd19bb7cd308e8f21125a2c6f49f9794167e41119e34269e26ad2d9bad6fc9
+EBUILD xf86-video-intel-2.10.0-r1.ebuild 1559 RMD160 c91b9af1609ad9a38e7d54384c31aa11594517bd SHA1 8959afa7a3f25d33e10feca517d90b11528e5511 SHA256 9d645872130dea02cbf97550b8b36fa07d7e92c32e09c36570454c9c7cab3e7c
+EBUILD xf86-video-intel-2.11.0.ebuild 1426 RMD160 ec605a328d5ef5810cca87e1db6e2d81e6132174 SHA1 7e530b8bf3ff8317272a4be964241c2742b46253 SHA256 ea287d9f11455b20a3aa41ffdcb5ecd589174d509a3b215ded9a67338ce3f489
+EBUILD xf86-video-intel-2.13.0.ebuild 1401 RMD160 1c59b5b69d15b00df030ea1683531f45ff7c585b SHA1 e65581f3eb926b095b86968d404bac0c01f37bdb SHA256 8b7f4b79b8eb22f9d63e806b6564ed81ddc1e90bb39f8b6d63ec2a65caeb9ac3
+EBUILD xf86-video-intel-2.14.0.ebuild 1401 RMD160 5d79eab403c7228c5e8b0a8f3b818764115d7fcf SHA1 60541a71ad0db2b640536fcff6ded0cde13a7d35 SHA256 ccd57e74ea6581f8014e139a5297c7c34fb93a564fbad5d0008851ab901ae20c
+EBUILD xf86-video-intel-2.15.0-r1.ebuild 1311 RMD160 63e82d73a709f6ef0fd8571c7a6b2f734e85a462 SHA1 cc324b5b1201c184c4d24eec0cf273ca2c2aefbd SHA256 c65a8ef6ab150e24ff3012a72777fe862b363dbd92edc741e02573d64b6a016c
+EBUILD xf86-video-intel-2.16.0.ebuild 1271 RMD160 a638fcf4a006dd64d284855cf8b76764967b0d63 SHA1 ec4dc169856206e0f2d220122fe41862b70bfaa3 SHA256 11cc712c4aa163b13060f796e599732c85456558c8266d1f33d68e3445486bd4
+EBUILD xf86-video-intel-2.17.0-r3.ebuild 1442 RMD160 47908bda92e1c2b6daa27c7eee74e685c67c7dab SHA1 fe2a5c8efe96e447e5af6372c77027efa61e4d68 SHA256 9d2b64140a5522fcf18e2c0d8779f989f73eb33ac51abd03d3cbd6e393eade45
+EBUILD xf86-video-intel-2.18.0.ebuild 1296 RMD160 079380e4a8634d7f37318843970c5c46a5997dfa SHA1 20721ed97cf3852f3596631e088cb851728922b5 SHA256 c434f7f8357afca5abb3f459eb4cdd7e7c25bbdad6ca2667c131c61d6877f934
+EBUILD xf86-video-intel-2.19.0.ebuild 1368 RMD160 a8d37c92c278d3ad07e87657fcb65562a3e8824d SHA1 c1acc6eceb395b691db2ea2e6a9121dcf4195f25 SHA256 e5a3753024787fed056796f71d563dc32082099b61bf30ec3693c84d35362a91
 EBUILD xf86-video-intel-2.8.1.ebuild 794 RMD160 930d426a13e53d243c70df156e27923586b2502b SHA1 33fb66dc8fda63b7057037c84645b23feeecad2d SHA256 d012b3c43258b9e5e06d56e1d4aec2711644443eb927e800f9525bdc9610bf2f
 EBUILD xf86-video-intel-2.9.1.ebuild 776 RMD160 feac2b322d6a93f93fa155a0a148353b7675d5b5 SHA1 9b9a418d2da61de513cb3fec0c47b081f9318079 SHA256 7093496b4a55550f1f2a11b0f405be716f5da354947ff7380a052e4fd6954129
-MISC ChangeLog 45835 RMD160 d873f6ebb20d073c7f2ad41a4392b273b57eab89 SHA1 772302c42891a96273bf1f4c8b0117eca1785052 SHA256 3fc2a6b2033c56a540335a0b71091a0f5d725cc852eeee0d7b1b12e321c76e0f
+MISC ChangeLog 46279 RMD160 92dc34bf2973923e07993eea60b83edbb9af603a SHA1 96072f6be07a6c0547bda971b5ba06a8467b6eb8 SHA256 4388a4367297bae381dfad358b9d4aeacef018824bd5efc7ac241672d3fe43eb
 MISC metadata.xml 348 RMD160 e6f4b2613ac47643dcfdcf2a86eeff8eb3214626 SHA1 18cdf7cab63aea5f1def12502f61a007fdf193d7 SHA256 fa82cf175b029cd8bb6b1376ff254d6505a9dccb779a7a3a94086c91a64aa5bc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEARECAAYFAk/0wC4ACgkQfUU/I5AasIpr0wCgtzHbgucgdor3qr85s+iLgXJd
+JHcAniB8tcIfa0eZohZGjRaW3NOaIR7y
+=/Ztz
+-----END PGP SIGNATURE-----
