@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/xf86-video-intel-2.17.0-r3.ebuild,v 1.5 2012/06/26 00:08:06 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/xf86-video-intel-2.17.0-r3.ebuild,v 1.6 2012/07/04 22:13:45 remi Exp $
 
 EAPI=4
 
@@ -16,6 +16,7 @@ RDEPEND="x11-libs/libXext
 	x11-libs/libXfixes
 	x11-libs/libXvMC
 	>=x11-libs/libxcb-1.5
+	x11-libs/xcb-util
 	>=x11-libs/libdrm-2.4.23[video_cards_intel]
 	sna? (
 		>=x11-base/xorg-server-1.10
