@@ -1,6 +1,15 @@
 # ChangeLog for x11-drivers/xf86-video-intel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.90 2012/06/26 00:08:06 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.91 2012/07/04 22:13:45 remi Exp $
+
+  04 Jul 2012; Rémi Cardona <remi@gentoo.org>
+  xf86-video-intel-2.10.0-r1.ebuild, xf86-video-intel-2.11.0.ebuild,
+  xf86-video-intel-2.13.0.ebuild, xf86-video-intel-2.14.0.ebuild,
+  xf86-video-intel-2.15.0-r1.ebuild, xf86-video-intel-2.16.0.ebuild,
+  xf86-video-intel-2.17.0-r3.ebuild, xf86-video-intel-2.18.0.ebuild,
+  xf86-video-intel-2.19.0.ebuild:
+  Fix automagic dependency on xcb-aux (provided by x11-libs/xcb-utils), see bug
+  ##352573.
 
   26 Jun 2012; Robin H. Johnson <robbat2@gentoo.org>
   xf86-video-intel-2.10.0-r1.ebuild, xf86-video-intel-2.11.0.ebuild,
